--- a/src/Button/button.module.css
+++ b/src/Button/button.module.css
@@ -1,11 +1,11 @@
 .Button {
   padding: 8px 16px;
-  margin-left: 550px;
   border-radius: 2px;
-  background-color: #99a5e5;
+  background-color: #3f51b5;
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
   text-align: center;
   display: inline-block;
+  margin-left: 600px;
   color: #fff;
   border: 0;
   text-decoration: none;
@@ -18,10 +18,9 @@
   min-width: 180px;
   box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2),
     0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
-  overflow-anchor: none;
 }
 
 .Button:hover,
 .Button:focus {
-  background-color: #263ccf;
+  background-color: #303f9f;
 }
